# gAST-generator

./: CMakeLists.txt  README.md  main.c
code_gen/: code_gen.c  code_gen.h
lib/: ctool.c  ctool.h  error_report.c  error_report.h  lexer.c  lexer.h  sscanner.c  sscanner.h  sstring.c  sstring.h  stack.c  stack.h
parser/: AST.c  AST.h  main.c  match.c  match.h  parser_globals.c  parser_globals.h  parser_main.c  parser_main.h  production.c  production.h  sparser.c  sparser.h
scanner/: README.md  expression.c  expression.h  functions.c  functions.h  main.c  micro_c.tokens  scanner.c  scanner.h  scanner_globals.c  scanner_globals.h  scanner_main.c  scanner_main.h  sparser.c  sparser.h  spredicate.c  spredicate.h  token_parser.c  token_parser.h  tokens.c  tokens.h
shared/: ctool.c  sscanner.c  sscanner.h
test/: micro_c.nonterminals  micro_c.tokens  read.S  test.S  test.source  write.S
